# dlt-booth

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
abigen/src/: main.rs
api/: dlt_booth.yaml
api/dlt-boot-api/Delegated/: Delete Identity.bru
api/dlt-booth-api/: bruno.json  collection.bru
api/dlt-booth-api/DIDS/: DID Resolve.bru
api/dlt-booth-api/Delegated/: Create Identity.bru  Get Identity.bru
api/dlt-booth-api/Offering management/: Create offering.bru  Get offering addresses.bru  Get offering.bru
connector-rs/: .gitignore  Cargo.toml
connector-rs/api/: index.yaml
connector-rs/env/: example.env  postgres.env
connector-rs/sql/: asset_get.sql  asset_get_all_aliases.sql  asset_get_with_alias.sql  asset_insert.sql  asset_update_nft_addr.sql  dbinit.sql  download_request_cleanup.sql  download_request_get.sql  download_request_remove.sql  identity_insert.sql  identity_update_vc.sql
connector-rs/src/: dtos.rs  errors.rs  lib.rs  main.rs
connector-rs/src/contracts/: mod.rs  servicebase.rs
connector-rs/src/controllers/: assets_controller.rs  challenges_controller.rs  delegated_identities.rs  identities_controller.rs  mod.rs
connector-rs/src/middlewares/: ver_presentation_jwt.rs
connector-rs/src/models/: identity.rs
connector-rs/src/repository/: asset_operations.rs  download_request_operations.rs  postgres_repo.rs
connector-rs/src/services/: mod.rs
connector-rs/src/utils/: alloy_signer.rs  configs.rs  connector_identity.rs  iota.rs  issuer.rs  mod.rs
dlt-booth/: Cargo.toml
dlt-booth/env/: example.env  postgres.env
dlt-booth/sql/: asset_get.sql  asset_get_all_aliases.sql  asset_get_with_alias.sql  asset_insert.sql  asset_update_nft_addr.sql  dbinit.sql  download_request_cleanup.sql  download_request_get.sql  download_request_insert.sql  download_request_remove.sql  identity_delete.sql  identity_get.sql  identity_get_with_eth_addr.sql  identity_insert.sql  identity_update_vc.sql
dlt-booth/src/: dtos.rs  errors.rs  lib.rs  main.rs
dlt-booth/src/contracts/: mod.rs
dlt-booth/src/controllers/: delegated_identities.rs  dids_controller.rs  identities_controller.rs  mod.rs  offering_controller.rs
dlt-booth/src/models/: asset.rs  download_request.rs  identity.rs  mod.rs
dlt-booth/src/repository/: asset_operations.rs  download_request_operations.rs  identity_operations.rs
dlt-booth/src/utils/: alloy_signer.rs  configs.rs  iota.rs  issuer.rs  jwt.rs  mod.rs  stronghold_local_wallet.rs
env/: example.env  postgres.env
kubernetes/: 000-dlt-booth-namespace.yaml  005-dlt-booth-postgres-pvc.yaml  005-dlt-booth-pvc.yaml  010-dlt-booth-configmap.yaml  010-dlt-booth-postgres-configmap.yaml  015-dlt-booth-postgres-secret.yaml  015-dlt-booth-secret.yaml  015-docker-registry-secret.yaml  020-dlt-booth-deployment.yaml  020-dlt-booth-postgres-deployment.yaml  025-dlt-booth-postgres-svc.yaml  025-dlt-booth-svc.yaml
smart-contracts/: Factory.json  ServiceBase.json
sql/: asset_get.sql  asset_get_all_aliases.sql  asset_insert.sql  asset_update_nft_addr.sql  dbinit.sql  download_request_get.sql  download_request_insert.sql  download_request_remove.sql  identity_get.sql  identity_get_with_eth_addr.sql  identity_insert.sql  identity_update_vc.sql
src/: dtos.rs  errors.rs  lib.rs  main.rs
src/contracts/: erc721base.rs  mod.rs
src/controllers/: assets_controller.rs  challenges_controller.rs  identities_controller.rs  mod.rs
src/middlewares/: mod.rs  ver_presentation_jwt.rs
src/models/: asset.rs  download_request.rs  identity.rs  mod.rs
src/repository/: asset_operations.rs  download_request_operations.rs  identity_operations.rs  mod.rs  postgres_repo.rs
src/services/: identity_service.rs  mod.rs
src/utils/: files.rs  iota.rs  mod.rs
