[package]
name = "dlt-booth"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.develop] #optimize iota sdk even in debug mode
debug-assertions = true
inherits = "release"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"

anyhow = "1.0.75"
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.10.0"
hex = "0.4.3"
uuid = {version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde =  { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.50"
reqwest = "0.11.22"
rand = "0.8.5"
tokio = { version = "1.20.1", default-features = false, features = ["rt"] }
async-trait = "0.1.74"

# iota libraries
iota-sdk = { version = "1.1.2", features = ["stronghold"]}
identity_iota = { version = "1.3.*", features = ["memstore"]}
identity_eddsa_verifier = "1.0.0"
identity_stronghold = "1.0.0"
iota-crypto = {version = "0.23.0", default-features = false, features = ["ed25519", "random", "blake2b"]}

# postgres
deadpool-postgres = { version = "0.11.0", features = ["serde"]}
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"

# others
blake2 = "0.10.6"
base64 = "0.21.5"
futures-util = "0.3.30"
actix-web-lab = "0.20.1"
clap = { version = "4.4.2", features = ["derive", "env"] }
url = "2.5.2"
zeroize = "1.8.1"
alloy = {version = "0.6.4", features = ["sol-types", "json", "signers", "network", "consensus", "providers", "contract", "transports"] }

[lib]
name = "dlt-booth"
path = "src/lib.rs"

[[bin]]
name = "dlt-booth"
path= "src/main.rs"
